--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    
+    <meta name="ines" content="This website is just an exercise to practice the basic html structure" />
+    <title>Das wetter</title>
+  
+</head>
+<body> 
+  <!-- Hauptüberschrift mit Titel "HALLO WELT" -->
+  <h1 title="HALLO WELT">Wetter in BW: Auf Blitzeis folgt nun Schnee</h1>
+   <!-- Erster Abschnitt über Schneefall -->
+  <p>Die Gefahr von Glatteis im Land ist laut Wetterfachleuten vorerst weitgehend vorbei. Ab dem heutigen Donnerstag fällt dagegen in vielen Landesteilen Schnee.</p>
+  
+  <!-- Überschrift "Guten Morgen" mit Titel "Guten morgen" -->
+  <h2 title="Guten morgen">Schneefall in BW ist rasch vorbei</h2>
+  <!-- Abschnitt über den erwarteten Schneefall -->
+  <p>Die Wetterfachleute rechnen mit bis zu drei Zentimetern Schnee. Zunächst soll im Nordwesten der Regen in Schneefall übergehen. Das bedeutet, dass morgens zunächst die Region um Mannheim betroffen ist, gegen Mittag dann Stuttgart und später das Allgäu. In der Nacht zum Freitag soll der Schneefall im Süden bereits wieder abziehen.</p>
 
+  <!-- Überschrift "Bis morgen" mit Titel "Bis morgen" -->
+  <h3 title="Bis morgen">So wird das Wetter am Wochenende in BW</h3>
+  <!-- Abschnitt über das Wetter am Wochenende -->
+  <p>Ab Freitag kommen dann ruhigere, aber kalte Tage mit viel Sonne, heißt es vom Deutschen Wetterdienst. Schon am Freitag werde es nochmal deutlich kühler. So sollen die Tiefstwerte in der Nacht zum Samstag zwischen minus 4 und minus 16 Grad liegen.</p>
+
+ <!-- Pre-Element -->
+  <pre>
+/**********************************
+*__        __   _     _   _       *
+*\ \      / /__| |__ | | | |_ __  *
+* \ \ /\ / / _ \ '_ \| | | | '_ \ *
+*  \ V  V /  __/ |_) | |_| | |_) |*
+*   \_/\_/ \___|_.__/ \___/| .__/ *
+*                          |_|    *
+***********************************/
+</pre>
+</body>
+</html>
